...

                            Row(verticalAlignment = Alignment.CenterVertically,
                                modifier = Modifier
                                    .background(colorResource(id = R.color.teal_primary))
                                    .padding(5.dp)
                                    .fillMaxWidth()
                                    .testTag("moveList")
                                    .clickable { expanded = !expanded }) {
                                Text(
                                    stringResource(id = R.string.pokemon_moves) + " (${pokemon.moves.size})",
                                    color = colorResource(id = R.color.mint_background),
                                    fontSize = 20.sp,
                                    fontFamily = latoBoldFont,
...
